# htmx-play

./: Cargo.toml  README.md
assets/: events.js  index.html  styles.css
src/: main.rs  mishap.rs
src/apps/: mod.rs
src/apps/dogs/: mod.rs
src/apps/infiniscroll/: mod.rs
src/apps/lazy/: mod.rs
src/apps/oob/: mod.rs
src/apps/pagination/: mod.rs
src/apps/toggle/: mod.rs
src/apps/trigger/: mod.rs
src/apps/validate/: mod.rs
src/components/: image.rs
templates/: dogs.html  index.html  infiniscroll.html  lazy.html  oob.html  pagination.html  toggle.html  trigger.html  validate.html
