[package]
name = "htmx-play"
version = "0.1.0"
edition = "2021"

[dependencies]
uuid = { version = "1", features = ["v7"] }
once_cell = "1"

axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tower-livereload = "0.9"
maud = { version = "0.26", features = ["axum"] }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

tokio = { version = "1", features = ["full"] }





