[package]
name = "htmx-play"
version = "0.2.0"
edition = "2021"

[dependencies]
# Serde required for axum form deserialization
serde = { version = "1", features = ["derive"] }

# Serde JSON required for JSON exmaples in: triggers
serde_json = "1"

# For making fun example names and colours
rand = "0.9"

# For session-based storage in the "toggle" example
axum_session = { version = "0.16" }

tokio = { version = "1", features = ["full"] }
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace"] }
tower-livereload = "0.9"

maud = { version = "0.27", features = ["axum"] }

uuid = { version = "1", features = ["v7", "serde"] }
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

